[gd_scene load_steps=8 format=3 uid="uid://yb0gbqnpgs2j"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_vwaxm"]
[ext_resource type="PackedScene" uid="uid://1u4j0gj6s8r7" path="res://prefabs/ball.tscn" id="2_qlto7"]
[ext_resource type="PackedScene" uid="uid://dbjbnyddt56rj" path="res://prefabs/goal.tscn" id="3_e7w6v"]
[ext_resource type="Script" path="res://scripts/wall.gd" id="4_6jle6"]
[ext_resource type="PackedScene" uid="uid://bv28hrltpc6hc" path="res://prefabs/node_editor.tscn" id="5_fyi2k"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6521y"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nv2uc"]
size = Vector2(1, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_vwaxm")

[node name="Ball" parent="." instance=ExtResource("2_qlto7")]
position = Vector2(320, 896)
can_sleep = false

[node name="Goal" parent="." instance=ExtResource("3_e7w6v")]
position = Vector2(320, 128)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, 928)
physics_material_override = SubResource("PhysicsMaterial_6521y")
script = ExtResource("4_6jle6")
width = 640
height = 96

[node name="HitBox" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(320, 48)
scale = Vector2(640, 96)
shape = SubResource("RectangleShape2D_nv2uc")
debug_color = Color(1, 0, 0.0862745, 0.419608)

[node name="NodeEditor" parent="." instance=ExtResource("5_fyi2k")]
